fix rule spinner flickering

--- a/src/mist/io/static/main.css
+++ b/src/mist/io/static/main.css
@@ -770,6 +770,10 @@ div.loading-monitoring {
     border-top: 1px solid #ccc;
 }
 
+.rule-box {
+    max-height: 60px;
+}
+
 .rule-if, .rule-then, .key-name {
     font-size: 20px;
     font-weight: bold;
